--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
+    "pm2": "^5.3.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   }
